# agent-docs

./: .gitignore  Makefile  README.md  agent-infra-startup.sh  claude.md  code-style-short.md  packages.md  planning.md  template-audit-bug.md  template-commit.md  template-readme.md
ComplementaryDocsToAgentDocs/: BREADCRUMBS.md  CLAUDE_TEMPLATE.md  CLOSED_DECISION_LOG.md  DOCS_STRATEGY.md  EXECUTION_PLAN.md  OPEN_DECISIONS.md  PROJECT_SPEC.md  PROJECT_STATE.md  README.md  TASK_BRIEFS.md  WORKFLOW.md
agent_docs/: claude.md  planning.md  template-adr.md  template-conversation.md
agent_tools/: pyproject.toml
agent_tools/agent_tools/: README.md  analysis.py  compare.py  mcp_server.py  output.py  output_html.py  parsing.py  run.py  validate.py  viz_callgraph.py  viz_defuse.py  viz_reversedeps.py
agents/: agent-architecture.md  agent-audit-architecture.md  agent-audit-implementation.md  agent-audit-specification.md  agent-implementation.md  agent-manager.md  agent-specification.md
docs/adr/: 0001-2026-03-11-packaging.md  0002-2026-03-11-skillpaths.md
skills/audit-bugs/: SKILL.md
skills/callgraph/: SKILL.md
skills/defuse/: SKILL.md
skills/draft-commit-message/: SKILL.md
skills/revdeps/: SKILL.md
skills/summarise-conversation/: SKILL.md
skills/tree/: SKILL.md
skills/update-readme/: SKILL.md
workflows/: .env.template  Dockerfile  README.md  claude_runner.py  docker-claude.sh  generate_checklist.py  pipeline_comprehensive.py  pipeline_managed.py  validate.py
